--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- @todo get some sooth google font -->
+
+<p>its new #1 lalla</p>
+
+<!-- @todo get GA code here! -->
 <div>
 	<h1>something new</h1>
 </div>
+<p>its new #2 lalalla</p>
